[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlgym-lunar-lander"
dynamic = ["version"]
description = "The RLGym implementaton of the lunar lander environment"
readme = "README.md"
authors = [
    { name = "Mathieu Suchet", email = "msuchet63@gmail.com" }
]
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["rlgym", "box2d ==2.3.10", "pygame-ce >=2.1.3", "swig ==4.*", "numpy"]
# Optional: define classifiers for PyPI
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]